templates/8-mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          args:
          - "--ignore-db-dir=lost+found"
          ports:
          - containerPort: 3306
            name: "mysql"
          volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
          resources:
            limits:
              memory: "1G"
              cpu: 0.3
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: local-path
