templates/9-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector: 
    app: mysql
  ports:
  - port: 3306
    name: "mysql"
    protocol: TCP
    targetPort: 3306
